unpackaged/main/default/objects/OpportunityLineItem/fields/Cost_per_1_000__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_1_000__c</fullName>
    <description>Calculated Product Cost per 1000 Sq Ft (based on Rate and Product Size)</description>
    <formula>IF( Per_1_000__c = TRUE &amp;&amp; PricebookEntry.Product2.Size__c &gt; 0,  (UnitPrice / PricebookEntry.Product2.Size__c) *  Rate__c , 
  IF (Per_Acre__c = TRUE &amp;&amp; PricebookEntry.Product2.Size__c &gt; 0,  ((UnitPrice / PricebookEntry.Product2.Size__c) *  Rate__c) / 43.56, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated Product Cost per 1000 Sq Ft (based on Rate and Product Size)</inlineHelpText>
    <label>Cost per 1,000</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>