unpackaged/main/default/objects/OpportunityLineItem/fields/EPA__c.field-meta.xml
<CustomField>
    <fullName>EPA__c</fullName>
    <formula>PricebookEntry.Product2.EPA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPA #</label>
    <type>Text</type>
</CustomField>