unpackaged/main/default/objects/OpportunityLineItem/fields/Line_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Type__c</fullName>
    <description>Seperate Sports Turf and ATS Product Line Items into Categories for Reporting</description>
    <formula>IF(LEFT (PricebookEntry.Product2.ProductCode, 9) = &#39;JDT-X-SUB&#39;, &#39;Sub Contract&#39;, 

  IF(LEFT(PricebookEntry.Product2.ProductCode,5) = &#39;JDT-X&#39; || LEFT(PricebookEntry.Product2.ProductCode,12) = &#39;ATS SHIPPING&#39;, &#39;Exempt&#39;, 

    IF(LEFT(PricebookEntry.Product2.ProductCode,4) = &#39;JDT-&#39;, &#39;Services&#39;,

    &#39;Other&#39;)))</formula>
    <label>Line Item Type</label>
    <type>Text</type>
</CustomField>