unpackaged/main/default/objects/OpportunityLineItem/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <formula>PricebookEntry.Product2.Lot_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lot Number</label>
    <type>Text</type>
</CustomField>