unpackaged/main/default/objects/OpportunityLineItem/fields/Markup_Percent__c.field-meta.xml
<CustomField>
    <fullName>Markup_Percent__c</fullName>
    <label>Markup (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>