unpackaged/main/default/objects/OpportunityLineItem/fields/Per_1_000__c.field-meta.xml
<CustomField>
    <fullName>Per_1_000__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Track Product Application per 1000 Sq Ft</description>
    <inlineHelpText>Track Product Application per 1000 Sq Ft</inlineHelpText>
    <label>Per 1,000</label>
    <type>Checkbox</type>
</CustomField>