unpackaged/main/default/objects/OpportunityLineItem/fields/Per_Acre__c.field-meta.xml
<CustomField>
    <fullName>Per_Acre__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Track Product Application per Acre</description>
    <inlineHelpText>Track Product Application per Acre</inlineHelpText>
    <label>Per Acre</label>
    <type>Checkbox</type>
</CustomField>