unpackaged/main/default/objects/OpportunityLineItem/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>The rate of application for this product</description>
    <inlineHelpText>The rate of application for this product</inlineHelpText>
    <label>Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>