unpackaged/main/default/objects/OpportunityLineItem/fields/Target_Pest__c.field-meta.xml
<CustomField>
    <fullName>Target_Pest__c</fullName>
    <label>Target Pest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>