unpackaged/main/default/objects/OpportunityLineItem/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <description>Workflow Rule - Will auto-populate from the Service Unit of Measure field if blank</description>
    <inlineHelpText>Will auto-populate from the Service if left blank - indicates what type of unit is in the quantity field (Square Footage, Acres, 1/2 day, etc)</inlineHelpText>
    <label>Unit of Measure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>