unpackaged/main/default/objects/OpportunityLineItem/validationRules/Additional_Service.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_Service</fullName>
    <active>true</active>
    <description>In order to add this as an opportunity service you must provide a description</description>
    <errorConditionFormula>AND( 
OR(Product2.Name = &quot;Additional Service&quot;,
Product2.Name = &#39;JDT-Non ATS Product or Supply&#39;),
ISBLANK(Description) 
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>To save this service you must provide a description</errorMessage>
</ValidationRule>