unpackaged/main/default/objects/OpportunityLineItem/validationRules/JDT_Non_ATS_Product_or_Supply.validationRule-meta.xml
<ValidationRule>
    <fullName>JDT_Non_ATS_Product_or_Supply</fullName>
    <active>true</active>
    <description>In order to add this as an opportunity item you must provide a description</description>
    <errorConditionFormula>AND(CONTAINS(Product2.Name,&#39;JDT-Non ATS Product or Supply&#39;),
OR( 
ISBLANK(Description),
ISBLANK( Cost__c ) 
)
)</errorConditionFormula>
    <errorMessage>To save this item you must provide a COST and DESCRIPTION</errorMessage>
</ValidationRule>