unpackaged/main/default/objects/OpportunityLineItem/validationRules/JDT_X_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>JDT_X_Discount</fullName>
    <active>false</active>
    <description>Will not let you enter a jdt-x sale without 100% markdown</description>
    <errorConditionFormula>AND( BEGINS( Product2.ProductCode , &#39;JDT-X&#39;),
 Discount &lt; 100 ||  ISBLANK(Description)  
)</errorConditionFormula>
    <errorMessage>JDT-X Items must be 100% mark down</errorMessage>
</ValidationRule>