unpackaged/main/default/objects/OpportunityLineItem/validationRules/One_Markup_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>One_Markup_Type</fullName>
    <active>true</active>
    <description>You can only use Markup Currency or Markup Percent.</description>
    <errorConditionFormula>!ISBLANK(Markup__c) &amp;&amp; !ISBLANK(Markup_Percent__c)</errorConditionFormula>
    <errorMessage>You may only have either the currency Markup or the Percent Markup used to define the cost, not both. Please remove one in order to save.</errorMessage>
</ValidationRule>