unpackaged/main/default/objects/OpportunityLineItem/validationRules/Quote_has_been_approved_no_new_products.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_has_been_approved_no_new_products</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Opportunity.Quote_Approved__c = true,
$User.LastName != &#39;Pruden&#39;,
$User.LastName != &quot;Hancock&quot;,
$User.LastName != &quot;Hephner&quot;,
$User.LastName != &quot;O&#39;Grady&quot;,
$User.LastName != &quot;Kavanaugh&quot;,
$User.LastName != &quot;Sage&quot;
)</errorConditionFormula>
    <errorMessage>Quote has been approved you can&#39;t edit or add products</errorMessage>
</ValidationRule>